[package]
name = "commonware-broadcast-basic"
edition = "2021"
publish = true
version = "0.0.50"
license = "MIT OR Apache-2.0"
description = "Demonstrate the commonware-broadcast primitive."
readme = "README.md"
homepage = "https://commonware.xyz"
repository = "https://github.com/commonwarexyz/monorepo/tree/main/examples/broadcast-basic"
documentation = "https://docs.rs/commonware-broadcast-basic"

[dependencies]
commonware-broadcast = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
prometheus-client = { workspace = true }
governor = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }

[[bin]]
name = "commonware-broadcast-basic"
bench = false
